<?xml version="1.0" encoding="utf-8"?>
<resources>

 <string name="app_name">TBB</string>
    <string name="controller">Controller</string>
    <string name="default_controller">none</string>
    <string name="set_controller">Select interface controller</string>
    <string name="log">Logger</string>
    <string name="log1">Enabling logging</string>
    <string name="logIO">Log Touches</string>
    <string name="logIOTitle">Requires rooted device</string>
    <string name="wifi">Start wifi controller service</string>
    <string name="wifiTitle">Wifi controller</string>
    <string name="audioFeed1">Audio Feedback</string>
    <string name="audioFeed">Set Audio Feedback</string>
    <string name="calibration">Calibration</string>
    <string name="calibration1">First time calibration activity</string>
    <string name="visualFeed1">Visual Feedback</string>
    <string name="visualFeed">Set Visual Feedback</string>
    <string name="set_mswat">Customization</string>
    <string name="tbb_controls">Researcher Controls</string>
    <string name="title_activity_calibration">CalibrationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="intro_calibration">In order to calibrate the service please press the red dot</string>
    <string name="hello_world">Hello world!</string>
    <string name="keyboard">Keyboard</string>
    <string name="set_keyboard">Select the active keyboard</string>
    <string name="tpr">Touch Protocol</string>
    <string name="driver">Select Device</string>
    <string name="set_tpr">Select the multi-touch protocol</string>
    <string name="set_driver">Select the touchscreen device</string>
    <string name="title_activity_run_macro">RunMacro</string>


   <!--PREFERENCE STRINGS-->
   <string name="BB.PREFERENCE.TOUCH_RECOGNIZER">BB.PREFERENCE.TOUCH_RECOGNIZER</string>
    <string name="BB.PREFERENCE.TOUCH_DRIVER">BB.PREFERENCE.TOUCH_DRIVER</string>
    <string name="BB.PREFERENCE.LOGGING">BB.PREFERENCE.LOGGING</string>
   <string name="BB.PREFERENCE.FLAG_RESEARCHER_SESSION">BB.PREFERENCE.FLAG_RESEARCHER_SESSION</string>
   <string name="BB.PREFERENCE.FORCE_ENCRYPT">BB.PREFERENCE.FORCE_ENCRYPT</string>
   <string name="BB.PREFERENCE.FORCE_SYNC">BB.PREFERENCE.FORCE_SYNC</string>
   <string name="PREF_SEQUENCE_NUMBER">BB.STORAGECOORDINATOR.PREFERENCE.SEQUENCE_NUMBER</string>
   <string name="BB.PREFERENCE.LOGIO">BB.PREFERENCE.LOGIO</string>
   <string name="BB.PREFERENCE.ENCRYPTION_LEVEL">BB.PREFERENCE.ENCRYPTION_LEVEL</string>
    <string name="summary_encryption_level">Set the data encryption level</string>
    <string name="title_encryption_level">Encryption Level</string>
    <string name="BB.PREFERENCE.APP_PERMISSIONS">BB.PREFERENCE.APP_PERMISSIONS</string>
    <string name="title_app_permissions">Enable/Disable App Logging</string>


    <string name="pause_one_hour">Pause for 1 hour</string>
    <string name="notification_active">Active: Logging Data</string>
    <string name="PermissionsFileName">APP_PERMISSIONS</string>
    <string name="ConfigurationFolder">_config</string>

</resources>